fixed the spacing in mobile screen

--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ header h1 {
 
 @media(max-width: 768px) {
     header h1 {
-        margin-top: 2em;
+        margin-top: .5em;
         font-size: 1.75rem;
     }
 }
